--- a/cg2012.1/05-point_in_convex_polygon/statement/point_in_convex_polygon.tex
+++ b/cg2012.1/05-point_in_convex_polygon/statement/point_in_convex_polygon.tex
@@ -4,11 +4,11 @@
 
 \InputFile
 
-На первой строчке входного файла записано число $n$ --- количество вершин многоугольника. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающих координаты вершин на плоскости. Вершины обходятся против часовой стрелки. На следующей строчке записано натуральное число $m$ --- количество точек. На последующих $m$ строчках следуют пары вещественных чисел $(x_i, y_i)$, задающих координаты точек на плоскости.
+На первой строчке входного файла записано натуральное число $n$ --- количество вершин многоугольника. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающих координаты вершин на плоскости. Вершины обходятся против часовой стрелки. На следующей строчке записано натуральное число $m$ --- количество точек. На последующих $m$ строчках следуют пары вещественных чисел $(x_i, y_i)$, задающих координаты точек на плоскости.
 
 \OutputFile
 
-В выходной файл выведите $m$ строчек. В каждой $i$-ой строчке выведите YES, если $i$-ая точка принадлежит многоугольнику, и NO в противном случае. Точки выводятся в порядке их появления во входных данных.
+В выходной файл выведите $m$ строчек. В $i$-ой строчке выведите YES, если $i$-ая точка принадлежит многоугольнику, и NO в противном случае. Точки выводятся в порядке их появления во входных данных.
 
 \Examples
 
