--- a/cg2012.1/03-points_in_rectangle/statement/points_in_rectangle.tex
+++ b/cg2012.1/03-points_in_rectangle/statement/points_in_rectangle.tex
@@ -1,14 +1,14 @@
 \begin{problem}{03. Поиск множества точек плоскости, попавших в прямоугольник}{standart input}{standart output}{2 секунды}{256 мегабайт}
-На плоскости задано множество из $n$ точек. Также $m$ прямоугольников, стороны которых параллельны осям координат. Для каждого прямоугольника требуется вывести все точки из множества, которые в него попадают.
+На плоскости задано множество из $n$ точек. Также задано $m$ прямоугольников, стороны которых параллельны осям координат. Для каждого прямоугольника требуется вывести все точки множества, которые он содержит.
 
 \InputFile
 
-На первой строчке входного файла записано натуральное число $n$ --- количество точек. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающих координаты точек на плоскости.
-На следующей строчке записано натуральное число $m$ --- количество прямоугольников. На последующих $m$ строчках следуют две пары вещественных чисел $(a_{x_i}, a_{y_i}, b_{x_i}, b_{y_i})$, задающих координаты левого нижнего угла и правого верхнего угла соответственно.
+В первой строчке входного файла записано натуральное число $n$ --- количество точек в множестве. На последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающих координаты точек на плоскости.
+На следующей строчке записано натуральное число $m$ --- количество прямоугольников. На последующих $m$ строчках записаны по две пары вещественных чисел $(a_{x_i}, a_{y_i}, b_{x_i}, b_{y_i})$, задающих координаты левого нижнего угла и правого верхнего угла $i$-го прямоугольника соответственно.
 
 \OutputFile
 
-В выходной файл выведите $m$ блоков. В первой строчке каждого блока выведите $c_i$ --- число точек попавших в $i$-ый прямоугольник. В следующие $c_i$ строчек выведите координаты этих точек.
+В выходной файл выведите $m$ блоков. В первой строчке каждого блока выведите число $c_i$ --- количество точек, попавших в $i$-ый прямоугольник. В следующие $c_i$ строчек выведите координаты этих точек.
 
 \Examples
 
