--- a/cg2012.1/05-point_in_convex_polygon/statement/point_in_convex_polygon.tex
+++ b/cg2012.1/05-point_in_convex_polygon/statement/point_in_convex_polygon.tex
@@ -1,6 +1,6 @@
-\begin{problem}{05. Массовая принадлежность точки выпуклому прямоугольнику}{standart input}{standart output}{2 секунды}{256 мегабай}
+\begin{problem}{05. Массовая принадлежность точки выпуклому прямоугольнику}{standart input}{standart output}{2 секунды}{256 мегабайт}
 
-На плоскости задан выпуклый многоугольник и $n$ точек. Для кажой точки требуется определить, принадлежит ли она многоугольнику.
+На плоскости заданы выпуклый многоугольник и $n$ точек. Для каждой точки требуется определить, принадлежит ли она многоугольнику.
 
 \InputFile
 
