--- a/cg2012.1/17-polygon_grid_intersection/statement/polygon_grid_intersection.tex
+++ b/cg2012.1/17-polygon_grid_intersection/statement/polygon_grid_intersection.tex
@@ -1,37 +1,46 @@
-\begin{problem}{17. Пересечение многоугольника с сеткой}{standart input}{standart output}{2 секунды}{256 мегабай}
+\begin{problem}{17. Пересечение многоугольника с сеткой}{standart input}{standart output}{2 секунды}{256 мегабайт}
 
-На плоскости задан многоугольник и Декартова система координат. Требуется найти все точки пересечения мноугольника с прямыми вида $x = a$, $y = b$, где $a, b \in \mathbb Z$. При наложении считать только экстремальные точки этого наложения.
+На плоскости задан многоугольник. Требуется найти все точки пересечения мноугольника с прямыми вида $x = a$, $y = b$, где $a, b$ --- целые числа. При наложении ребра на прямую требуется вывести соответствующие ему вершины многоугольника.
 
 \InputFile
 
-В первой строчке входного файла записано число $n$ --- количество вершин многоугольника. В последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающих координаты вершин на плоскости. Вершины задаются против часовой стрелки.
+В первой строчке входного файла записано натуральное число $n$ --- количество вершин многоугольника. В последующих $n$ строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающих координаты вершин на плоскости. Вершины обходятся против часовой стрелки.
 
 \OutputFile
 
-В выходной файл выведите число $m$ --- количество точек персечения. В последующих $m$ строчках выведите пары вещественных чисел $(x_i, y_i)$, задающих координаты пересечения многоугольника с прямыми.
+В первой строчке выходного файла выведите целое неотрицательное число $m$ --- количество точек пересечения. В последующих $m$ строчках выведите пары вещественных чисел $(x_i, y_i)$, задающих координаты пересечения многоугольника с прямыми. Точки обходятся в порядке обхода многоугольника.
 
 \Examples
 
 \begin{example}%
 \exmp{
 5
-2 1 
-1 3
-3 5
-5 4
-4 2 
-}{
-10
 2 1
-1.5 2
-1 3
-2 4
-3 5
-4 4.5
-5 4
-4.5 3
 4 2
-3 1.5
+5 4
+3 5
+1 3
+}{
+11
+2 1
+3 0.3333
+4 0.6667
+5 2
+5 3
+5 4
+4 4.5
+3 5
+2 4
+1 3
+1.5 2
+}%
+\exmp{
+3
+0.1 0.1
+0.9 0.1
+0.1 0.9
+}{
+0
 }%
 \end{example}
 
