--- a/cg2012.1/06-triangle_rasterization/statement/triangle_rasterization.tex
+++ b/cg2012.1/06-triangle_rasterization/statement/triangle_rasterization.tex
@@ -1,6 +1,6 @@
 \begin{problem}{06. Растеризация треугольника}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Пусть на $\mathbb R^2$ задана координатная сетка: плоскость разбита на непересекающиеся ячейки вида $[n; n + 1) \times [m; m + 1)$, где $n$ и $m$ --- целые числа. Растеризацией многоугольника назовём множество ячеек, перечисленных в лексикографическом порядке, которые лежат внутри или на границе многоугольника. В данной задаче требуется найти растеризацию треугольника.
+Пусть на $\mathbb R^2$ задана координатная сетка: плоскость разбита на непересекающиеся ячейки вида $[n; n + 1) \times [m; m + 1)$, где $n$ и $m$ --- целые числа. Растеризацией объекта назовём множество ячеек, перечисленных в лексикографическом порядке, которые лежат внутри или на границе объекта. В данной задаче требуется найти растеризацию треугольника.
 
 \InputFile
 
