--- a/cg2012.1/07-convex_polygon_rasterization/statement/convex_polygon_rasterization.tex
+++ b/cg2012.1/07-convex_polygon_rasterization/statement/convex_polygon_rasterization.tex
@@ -1,6 +1,6 @@
 \begin{problem}{07. Растеризация выпуклого многоугольника}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Пусть на $\mathbb R^2$ задана координатная сетка: плоскость разбита на непересекающиеся ячейки вида $[n; n + 1) \times [m; m + 1)$, где $n$ и $m$ --- целые числа. Растеризацией многоугольника назовём множество ячеек, перечисленных в лексикографическом порядке, которые лежат внутри или на границе многоугольника. В данной задаче требуется найти растеризацию выпуклого многоугольника.
+Пусть на $\mathbb R^2$ задана координатная сетка: плоскость разбита на непересекающиеся ячейки вида $[n; n + 1) \times [m; m + 1)$, где $n$ и $m$ --- целые числа. Растеризацией объекта назовём множество ячеек, перечисленных в лексикографическом порядке, которые лежат внутри или на границе объекта. В данной задаче требуется найти растеризацию выпуклого многоугольника.
 
 \InputFile
 
