--- a/cg2012.1/06-triangle_rasterization/statement/triangle_rasterization.tex
+++ b/cg2012.1/06-triangle_rasterization/statement/triangle_rasterization.tex
@@ -4,11 +4,11 @@
 
 \InputFile
 
-В первых трех строчках входных данных заданы координаты вершин треугольника.
+На трех строчках через пробел записаны пары вещественных чисел $(x_i, y_i)$, задающих координаты вершин треугольника на плоскости. Вершины обходятся против часовой стрелки.
 
 \OutputFile
 
-В первой строчке выходных данных требуется вывести количество ячеек плоскости, которые участвуют в растеризации. Далее требуется на каждой строчке вывести ячейки плоскости (ячейка задаётся координатами нижнего левого угла) в лексикографическом порядке. Если в перечислении при фиксированной координате $x$ следует несколько ячеек подряд, необходимо вывести только ячейки с минимальной и максимальной координатами $y$.
+В первой строчке выходных данных требуется вывести количество ячеек плоскости, которые участвуют в растеризации. Далее требуется на каждой строчке вывести ячейки плоскости (ячейка задаётся координатами нижнего левого угла) в лексикографическом порядке.
 
 \Examples
 
@@ -23,8 +23,10 @@
 1 0
 1 1
 2 0
+2 1
 2 2
 3 0
+3 1
 3 2
 }%
 \end{example}
