--- a/cg2012.1/07-convex_polygon_rasterization/statement/convex_polygon_rasterization.tex
+++ b/cg2012.1/07-convex_polygon_rasterization/statement/convex_polygon_rasterization.tex
@@ -8,7 +8,7 @@
 
 \OutputFile
 
-В первой строчке выходных данных требуется вывести количество ячеек плоскости, которые участвуют в растеризации. Далее требуется на каждой строчке вывести ячейки плоскости (ячейка задаётся координатами нижнего левого угла) в лексикографическом порядке. Если в перечислении при фиксированной координате $x$ следует несколько ячеек подряд, необходимо вывести только ячейки с минимальной и максимальной координатами $y$.
+В первой строчке выходных данных требуется вывести количество ячеек плоскости, которые участвуют в растеризации. Далее требуется на каждой строчке вывести ячейки плоскости (ячейка задаётся координатами нижнего левого угла) в лексикографическом порядке.
 
 \Examples
 
@@ -25,10 +25,13 @@
 1 0
 1 1
 2 0
+2 1
 2 2
 3 0
+3 1
 3 2
 4 0
+4 1
 4 2
 }%
 \end{example}
