--- a/cg2012.1/15-segment_set_intersection/statement/segment_set_intersection.tex
+++ b/cg2012.1/15-segment_set_intersection/statement/segment_set_intersection.tex
@@ -1,7 +1,7 @@
 \begin{problem}{15. Пересечение множества отрезков}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 На плоскости задано множество отрезков. Требуется найти все точки пересечения.
-При наложении считать только экстремальные точки этого наложения.
+При наложении отрезков считать две точки, концы общей части этих отрекзов.
 Каждую точку нужно задать отрезками проходящими через нее.
 \InputFile
 В первой строке задано целое число $n$ --- количество отрезков.
@@ -9,7 +9,7 @@
 
 \OutputFile
 В первую строку выведите число $m$ --- количество точек пересечения отрезков.
-В следующие $m$ строчек выведите количество отрезков образующих $i$-ую точки пересечения и номера отрезков этих отреков. Отрезки нумеруются с единицы в порядке появления в исходных данных.  
+В следующие $m$ строчек выведите количество отрезков образующих $i$-ую точку пересечения и номера этих отреков. Отрезки нумеруются с единицы в порядке появления в исходных данных.  
 \Examples
 
 \begin{example}%
@@ -21,8 +21,8 @@
 2.0 12.0 2.0 3.0
 }{
 2
-9.0 9.0 1 2 3
-2.0 9.0 2 4
+3 1 2 3
+2 2 4
 }%
 \end{example}
 
