--- a/cg2012.1/22-point_shortest_path/statement/point_shortest_path.tex
+++ b/cg2012.1/22-point_shortest_path/statement/point_shortest_path.tex
@@ -1,8 +1,8 @@
 \begin{problem}{22. Кратчайший путь материальной точки между точками плоскости с полигональными препятствиями}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-На плоскости заданы две точки: начальное и конечное положение робота. Также на плоскости заданы полигональные препятствия.
+На плоскости заданы две точки: начальное и конечное положение робота. Робот является материальной точкой. Также на плоскости заданы полигональные препятствия. 
 Робот должен добраться из начальной точки в конечную по кратчайшему пути, при этом он может касаться препятствий.
-Кратчайший путь нужно задать точками, где робот меняет направление своего движения. Существование пути гарантируется.
+Кратчайший путь нужно задать точками, где робот меняет направление своего движения. Гарантируется существования пути и то, что робот изначально находится вне препятствия.
   
 \InputFile
 В первой строке заданы координаты старта и финиша соответственно.
