--- a/cg2012.1/10-minimum_circumscribed_circle/statement/minimum_circumscribed_circle.tex
+++ b/cg2012.1/10-minimum_circumscribed_circle/statement/minimum_circumscribed_circle.tex
@@ -1,4 +1,4 @@
-\begin{problem}{10. Вычисление минимальной описанной окружности множества точек плоскости}{standart input}{standart output}{2 секунды}{256 мегабай}
+\begin{problem}{10. Вычисление минимальной описанной окружности множества точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 На плоскости задано $n$ точек. Требуется найти окружность минимального радиуса, содержащую все точки.
 
