--- a/cg2012.1/16-circle_set_intersection/statement/circle_set_intersection.tex
+++ b/cg2012.1/16-circle_set_intersection/statement/circle_set_intersection.tex
@@ -1,4 +1,4 @@
-\begin{problem}{16. Пересечение множества окружностей}{standart input}{standart output}{2 секунды}{256 мегабай}
+\begin{problem}{16. Пересечение множества окружностей}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 На плоскости задано $n$ окружностей. Требуется вывести все точки пресечения этих окружностей.
 
