--- a/cg2012.1/17-polygon_grid_intersection/statement/polygon_grid_intersection.tex
+++ b/cg2012.1/17-polygon_grid_intersection/statement/polygon_grid_intersection.tex
@@ -1,4 +1,4 @@
-\begin{problem}{17. Пересечение многоугольника с сеткой}{standart input}{standart output}{2 секунды}{256 мегабайт}
+\begin{problem}{17. Пересечение многоугольника с сеткой}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 На плоскости задан многоугольник. Требуется найти все точки пересечения мноугольника с прямыми вида $x = a$, $y = b$, где $a, b$ --- целые числа. При наложении ребра на прямую требуется вывести соответствующие ему вершины многоугольника.
 
