--- a/cg2012.1/04-point_in_general_polygon/statement/point_in_general_polygon.tex
+++ b/cg2012.1/04-point_in_general_polygon/statement/point_in_general_polygon.tex
@@ -1,43 +1,46 @@
 \begin{problem}{04. Принадлежность точки произвольному многоугольнику}{standard
 input}{standard output}{2 секунды}{256 мегабайт}
 
-На плоскости заданы точка и некоторый произвольный многоугольник с дырками.
-Необходимо определить, принадлежит ли она этому многоугольнику.
+На плоскости заданы точки и некоторый произвольный многоугольник с дырками.
+Необходимо определить, принадлежат ли они этому многоугольнику.
 
 \InputFile
 
-Первая строка входного файла содержит два вещественных числа $(x, y)$ ---
-координаты точки. Вторая строка содержит целое число $n$ --- количество вершин
-многоугольника. В последующих $n$ строчках содержатся пары
+Первая строка входного файла содержит целое число $n$ ---
+количество вершин многоугольника. В последующих $n$ строчках содержатся пары
 вещественных чисел $(x_i, y_i)$ --- координаты $i$-ой вершины многоугольника.
 В следующей строке содержится целое число $m$ --- количество дырок в
 многоугольнике.
 В последующих $m$ строчках содержится информация о дырках. В $j$-ой строке
 содержится число $m_j$ --- количество вершин в дырке, а затем $m_j$ пар
 вещественных чисел $(x_{m_j}, y_{m_j})$ --- координаты этих вершин.
-Вершины многоугольника заданы в порядке обхода против часовой стрелки, вершины дырок - по часовой стрелке.
+Следующая строка содержит целое число $l$ --- количество точек, для которых
+требуется ответить, принадлежат ли они многоугольнику.
+В последующих $l$ строчках содержатся пары вещественных чисел $(x_k, y_k)$ ---
+координаты точек. Вершины многоугольника заданы в порядке обхода против часовой
+стрелки, вершины дырок - по часовой стрелке.
 
 \OutputFile
 
-В выходной файл выведите $1$, если точка внутри прямоугольника, $0$ --- на
-границе, $-1$ --- снаружи.
+В выходной файл выведите $l$ строк, содержащих $1$, если $k$-ая точка внутри
+прямоугольника, $0$ --- на границе, $-1$ --- снаружи.
 
 \Examples
 
 \begin{example}%
 \exmp{
-10 4
 4
 0 0 
 10 0
 10 10
 0 10
 0
+1
+10 4
 }{
 0
 }%
 \exmp{
-5 0.5
 3
 0 0
 10 0.5
@@ -47,6 +50,8 @@ input}{standard output}{2 секунды}{256 мегабайт}
 0.1 0.1
 0.1 0.9
 9 0.5
+1
+5 0.5
 }{
 -1
 }%
