--- a/cg2012.1/08-points_in_cell_general/statement/points_in_cell_general.tex
+++ b/cg2012.1/08-points_in_cell_general/statement/points_in_cell_general.tex
@@ -6,17 +6,18 @@
 
 \InputFile
 
-ѕерва€ строка входного файла содержит два целых числа $n$ --- количество точек и
-$d$ --- размерность пространства. ѕоследующие $n$ строк содержат
-по $d$ вещественных чисел --- координаты точек. ¬ последующих строках содержатс€
-грани €чейки.  ажда€ грань задаетс€ левой нижней вершиной и правой
-верхней. Ќа каждой строке указано по $2*d$ чисел, первые $d$ из них --- лева€
-нижн€€ вершина, последующие --- права€ верхн€€.
+ѕерва€ строка входного файла содержит натуральное число $d$ --- размерность
+пространства. ¬ следующих двух строках содержатс€ $2*d$ вещественных чисел, по
+$d$ в каждой, --- точки, описывающие €чейку.
+¬о второй строке --- лева€ нижн€€ точка, в третьей --- права€ верхн€€. „етверта€
+строка содержит натуральное число $n$ --- количество точек, дл€ которых нужно
+определить, попали ли они в €чейку.
+ѕоследующие $n$ строк содержат по $d$ вещественных чисел --- координаты точек.
 
 \OutputFile
 
-¬ первую строку выходного файла выведите целое число $m$ --- количество точек, попавших в
-€чейку.
+¬ первую строку выходного файла выведите целое неотрицательное число $m$ ---
+количество точек, попавших в €чейку.
 ¬ следующей строке укажите номера этих точек. “очки нумеруютс€ с единицы  в
 пор€дке по€влени€ во входных данных.
 
@@ -24,31 +25,30 @@ $d$ --- размерность пространства. ѕоследующие $n$ строк содержат
 
 \begin{example}%
 \exmp{
-6 2
+2
+0 0
+2 2
+6
 0 8
 1 6
 1.5 1.5
 0.5 0.5
 10 10
 0 0
-0 0 2 2
 }{
 3
 3 4 6
 }%
 \exmp{
-5 3
+3
+0 0 0
+3 3 3
+5
 1 1 1
 68 37.5 100
 0 0 0
 1.5 0.5 2
 3.5 3.1 3.2
-0 0 0 0 3 3
-0 0 0 3 0 3
-0 0 0 3 3 0
-0 0 3 3 3 3
-0 3 0 3 3 3
-3 0 0 3 3 3
 }{
 3
 1 3 4
