--- a/cg2012.1/02-segment_rasterization/statement/segment_rasterization.tex
+++ b/cg2012.1/02-segment_rasterization/statement/segment_rasterization.tex
@@ -1,6 +1,6 @@
 \begin{problem}{02. Растеризация отрезка}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Пусть на $\mathbb R^2$ задана координатная сетка: плоскость разбита на непересекающиеся ячейки вида $[n; n + 1) \times [m; m + 1)$, где $n$ и $m$ --- целые числа. Растеризацией объекта назовём множество ячеек, которые пересекаются с этим отрезком. В данной задаче требуется найти растеризацию отрезка.
+Пусть на $\mathbb R^2$ задана координатная сетка: плоскость разбита на непересекающиеся ячейки вида $[n; n + 1) \times [m; m + 1)$, где $n$ и $m$ --- целые числа. Растеризацией объекта назовём последовательность ячеек, пересекающих отрезок, упорядоченную лексикографически по координатам $(x, y)$ нижнего левого угла.
 
 \InputFile
 
@@ -8,12 +8,7 @@
 
 \OutputFile
 
-В первой строчке выходных данных требуется вывести количество ячеек плоскости, которые пересекает исходный отрезок. Далее требуется на каждой строчке вывести ячейки плоскости (ячейка задаётся координатами нижнего левого угла) в следующем порядке:
-\begin{itemize}
-\item сначала выводится ячейка, в которой находится первый конец отрезка
-\item после каждой ячейки (кроме последней) выводится ячейка, смежная с ней по ребру
-\item если смежной по ребру ячейки нет, выводится ячейка, смежная по углу
-\end{itemize}
+В первой строчке выходных данных требуется вывести количество ячеек плоскости, которые пересекает исходный отрезок. Далее требуется вывести координаты нижнего левого угла для каждой ячейки плоскости, входящей в растеризацию отрезка, на новой строчке для каждой ячейки.
 
 \Examples
 
