convex hull statement was fixed

--- a/cg2012.1/01-convex_hull/statement/convex_hull.tex
+++ b/cg2012.1/01-convex_hull/statement/convex_hull.tex
@@ -1,6 +1,6 @@
 \begin{problem}{01. Выпуклая оболочка точек плоскости}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
-Выпуклой комбинацией множества точек $x_i$ называется линейная комбинация вида $\sum_i \alpha_i x_i$, где $\alpha_i$ — положительные вещественные числа, для которых $\sum_i \alpha_i = 1$. Все возможные выпуклые комбинации множества задают так называемую выпуклую оболочку. В данной задаче требуется найти выпуклую оболочку конечного множества точек, перечисленных во входном файле.
+Задано множество точек плоскости. Требуется найти минимальный по включению выпуклый многоугольник, содержащий все точки из заданного множества.
 
 \InputFile
 
@@ -8,9 +8,7 @@
 
 \OutputFile
 
-Поскольку выпуклой оболочкой конечного множества точек на плоскости является выпуклый многоугольник (возможно, вырожденный), то для её задания достаточно перечислить точки, являющихся вершинами многоугольника.
-
-На первой строке выходного файла выведите $m$ — количество вершин многоугольника. Количество точек должно быть минимальным. Далее, на $m$ строчках выведите координаты точек, являющихся вершинами многоугольника в порядке обхода против часовой стрелки. 
+На первой строке выходного файла выведите $m$ — количество вершин многоугольника. Далее, на $m$ строчках выведите координаты точек, являющихся вершинами многоугольника в порядке обхода против часовой стрелки. 
 
 \Examples
 
