--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/statement/polyline_simplification.tex
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/statement/polyline_simplification.tex
@@ -1,8 +1,8 @@
 \begin{problem}{09. Упрощение полигональной цепи}{standard input}{standard output}{2 секунды}{256 мегабайт}
 
 Полигональная цепь — упорядоченное множество точек, последовательно соединенных отрезками.
-Ваша задача — упростить полигональную цепь с помощью алгоритма Дугласа-Пеккера (\emph{Douglas-Peucker}) так,
-чтобы расстояние от исходной цепи до получившейся было не больше $\varepsilon$.
+Ваша задача — упростить полигональную цепь так,
+чтобы расстояние от исходной цепи до получившейся было не больше $\varepsilon$. В упрощенной цепи количество точек должно быть не больше, чем в результате работы алгоритма Дугласа-Пеккера (\emph{Douglas-Peucker}).
 
 \InputFile
 
