--- a/cg2012.1/09-polyline_simplification_no_topology_preservation/statement/statement.tex
+++ b/cg2012.1/09-polyline_simplification_no_topology_preservation/statement/statement.tex
@@ -1,4 +1,4 @@
-﻿\documentclass[11pt,a4paper,oneside]{article}
+\documentclass[11pt,a4paper,oneside]{article}
 
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
